# evohack

./: .gitignore  CLAUDE.md  LICENSE  README.md  SEED_EXAMPLES.md  docker-compose.yml  evohack.py  pyproject.toml  requirements.txt
evohack/: classifier.py  context.py  fitness.py  ga.py  ga_scenario.py  genes.py  js_static.py  llm.py  memory.py  mutators.py  scenario.py  seeds.py  spider.py  spider_dynamic.py  targets.py
scenarios/: juice_feedback_captcha_bypass.json  juice_feedback_spam.json  juice_login_admin.json  juice_login_bruteforce.json
scripts/: run_juice_shop.sh
