[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evohack-llm"
version = "0.1.0"
description = "Genetic Algorithms + LLM for autonomous web vulnerability discovery"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EvoHack-LLM"}
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.43.0",
    "python-dotenv>=1.0.1",
    "aisuite>=0.1.0",
    "pydantic>=2.6.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "chromadb>=0.5.0",
]

[project.scripts]
evohack = "evohack:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evohack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
